--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "@google-cloud/local-auth": "^3.0.1",
     "console-stamp": "^3.1.2",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.1",
+    "googleapis": "^144.0.0",
     "log-timestamp": "^0.3.0"
-  }
+  },
+  "type": "commonjs"
 }
